SERVER-9861 explicitly forget temporary collections for versioning in M/R